--- a/trunk/cwinux/cwinux/trunk/README
+++ b/trunk/cwinux/cwinux/trunk/README
@@ -1,13 +1,11 @@
 /*
 版权声明：
 
-    本软件为个人所有，遵循GNU LGPL（http://www.gnu.org/copyleft/lesser.html），
-
-但有以下例外：
-
+    本软件遵循GNU GPL V3（http://www.gnu.org/licenses/gpl.html），
 
     联系方式：email:cwinux@gmail.com；微博:http://t.sina.com.cn/cwinux
 
 */
 
-./configure --with-libevent=/usr/local/ --with-xml-expat=/usr --with-cwinux=/usr/home/wenbo/install --prefix=/usr/home/wenbo/install/
+
+./configure  --with-xml-expat=/usr  --prefix=/usr/home/wenbo/install/
