--- a/trunk/cwinux/cwinux/trunk/ChangeLog
+++ b/trunk/cwinux/cwinux/trunk/ChangeLog
@@ -10,3 +10,8 @@ inline size_t getQueuedMsgNum(CWX_UINT16 unThreadIndex);
 2010-11-5    cwinux@gmail.com   v1.2.1
 store模块的CwxBinLogFile类，修改sid的折半查找算法的bug，缺少+-1，api为：
 int CwxBinLogFile::seek(CwxBinLogCursor& cursor, CWX_UINT8 ucMode);
+*********************************************************************
+2011-5-04    cwinux@gmail.com   v2.0
+CwxThreadPoolEx对象的m_threadArr成员没有创建，造成线程start()的时候core。
+在int CwxThreadPoolEx::start(CwxTss** pThrEnv, size_t stack_size)中增加了
+m_threadArr = new CwxThread*[getThreadNum()];的代码。
