--- a/cwinux/ChangeLog
+++ b/cwinux/ChangeLog
@@ -25,3 +25,7 @@ CwxLruCache对象的定义错误。
 *********************************************************************
 2011-5-16    cwinux@gmail.com   v2.0
 增加了util/CwxCrc32的对象，对应的文件为util/include/CwxCrc32.h、util/src/CwxCrc32.cpp。
+*********************************************************************
+2011-5-30    cwinux@gmail.com   v2.0
+修改了CwxEpoll的signal方面的bug。此bug造成收到signal后，没有清空signal fd中写入的字符，epoll进入循环。
+
