--- a/trunk/cwinux/ChangeLog
+++ b/trunk/cwinux/ChangeLog
@@ -31,3 +31,14 @@ CwxLruCache对象的定义错误。
 *********************************************************************
 2011-6-20    cwinux@gmail.com   v2.0.2
 修改了util/CwxMd5及util/CwxCrc32的签名bug。
+*********************************************************************
+2011-6-27    cwinux@gmail.com   v2.0.6
+修改了CwxAppHandler4Channel类，当连接关闭的时候，未发出的消息free前，需要首先判断Fail-notice标志，若设置的话需要通知上层。
+*********************************************************************
+2011-6-27    cwinux@gmail.com   v2.0.6
+修改了CwxAppHandler4Channel类，当连接关闭的时候，未发出的消息free前，需要首先判断Fail-notice标志，若设置的话需要通知上层。
+*********************************************************************
+2011-6-27    cwinux@gmail.com   v2.0.6
+修改了CwxAppHandler4Channel::recvPackage()。即便消息的body为0，也需要建立msg对象。
+
+
