--- a/cwinux/ChangeLog
+++ b/cwinux/ChangeLog
@@ -40,5 +40,10 @@ CwxLruCache对象的定义错误。
 *********************************************************************
 2011-6-27    cwinux@gmail.com   v2.0.6
 修改了CwxAppHandler4Channel::recvPackage()。即便消息的body为0，也需要建立msg对象。
-
+*********************************************************************
+2011-07-10    cwinux@gmail.com   v2.1.0
+1、CwxBinlogMgr支持write-cache
+2、修改了消息结构，去掉了attr熟悉（多余了，浪费空间）。
+3、binlog 消息文件，最大为2G。不再支持大消息文件。
+*********************************************************************
 
