--- a/cwinux/ChangeLog
+++ b/cwinux/ChangeLog
@@ -46,4 +46,7 @@ CwxLruCache对象的定义错误。
 2、修改了消息结构，去掉了attr熟悉（多余了，浪费空间）。
 3、binlog 消息文件，最大为2G。不再支持大消息文件。
 *********************************************************************
+2011-10-10    cwinux@gmail.com   v2.1.12
+1、修改CwxAppHandler4Channel::close ，在delete this前，首先检查是否m_bRedo，并cancel redo
+*********************************************************************
 
